--- a/package.json
+++ b/package.json
@@ -34,13 +34,14 @@
     "koa": "^2.13.1",
     "koa-router": "^10.0.0",
     "koa-session": "^6.1.0",
-    "next": "^10.0.4",
+    "next": "^11.1.2",
     "next-env": "^1.1.0",
     "node-fetch": "^2.6.1",
     "react": "^16.10.1",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.10.1",
-    "webpack": "^4.44.1"
+    "store-js": "^2.0.4",
+    "webpack": "^5.55.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.12.10",
